# BBai64DFC

./: .clang-format  .clangd  .gitignore  .gitmodules  Dockerfile  README.md
bbai64_os/: README
bbai64_os/conf/: layer.conf
bbai64_os/conf/machine/: dfc-k3r5.conf  dfc.conf
bbai64_os/images/: factory-image.bb  firmware-image.bb
core/: DFC_c66_component .mk  DFC_component.mk  makefile  makefile_c66  makefile_r5
core/interface/barometer/: bmp280.h
core/interface/common/: rsc_table.h
core/interface/comms/: RPMsg_helper.h  RPMsg_helper_c.h  TraceLogger.h  logger.h
core/interface/controller/: PIDController.h  rcIA6.h
core/interface/ekf/: ekf.h  ekf2.h
core/interface/imu/: i2c_helper.h  mpu9250.h
core/interface/opticalflow/: oflow.h  oflow_c66x.h
core/interface/pwm/: PWMController.h  PWMgen.h
core/src/barometer/: bmp280.cpp
core/src/common/: rsc_table.c
core/src/comms/: RPMsg_helper.c  RPMsg_helper.cpp  TraceLogger.cpp  logger.cpp
core/src/controller/: PIDController.cpp  rcIA6.cpp
core/src/core_c66x/: main_dsp.c  main_dsp.cpp
core/src/core_r5f2_0/: rtos_main.c  rtos_main.cpp
core/src/ekf/: ekf.cpp
core/src/imu/: i2c_helper.cpp  mpu9250.cpp
core_a72/: CMakeLists.txt
core_a72/interface/common/types/: shared_types.h
core_a72/interface/isp/: isp.h
core_a72/interface/telemetry/: tele_tx.h
core_a72/src/calibration_helper/: imu_calib_helper.cpp
core_a72/src/isp/: img_tx.cpp  isp.cpp
core_a72/src/telemetry/: tele_tx.cpp
scripts/: advanced_calibration.py  run.sh  simulation.py  simulation_extra.py  simulation_minimalist.py
(+76 files in other folders)
